--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,65 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
   padding:0;
   vertical-align:baseline;
 }
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
+  display:block;
+}
+
+h1 {
+	font-size: 2.5em;
+	font-weight: bold;
+}
+h2 {
+	font-size: 2em;
+	font-weight: bold;
+}
+h3 {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+h4 {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+h5 {
+	font-size: 1.25em;
+	font-weight: bold;
+}
+h6 {
+	font-size: 1.11em;
+	font-weight: bold;
+}
+p {
+	font-size: 1em;
+}
+lu {
+	list-style-type: none;
+}
+section {
+  border-top: 1px solid #dedede;
+  padding: 20px 0 0;
+}
+
+.clear {
+	clear: both;
+}
 
 .total {
 	background-color: #181a1b;
 	color: #e8e6e3;
+  margin: 30px auto;
+  max-width: 1040px;
+  width: 90%;
 	font-size: 16px;
 }
 
 .container {
-	font-size: 1em;
 	line-height: 1.4em;
+	margin:	30px;
 	margin-bottom: 2px solid;
 }
 
 .mainContent {
-	background: #f3f3f3;
 	margin: 30px auto;
 	max-width: 1040px;
 	width: 90%;
@@ -30,4 +74,14 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 	font-size: 0.8em;
 	font-style: italic;
 	margin-bottom: 3px;
+}
+
+.sectionTitle {
+	float: left;
+	width: 25%;
+}
+
+.sectionContent {
+	float: right;
+	width: 72.5%;
 }
